force-app/main/default/objects/Sep_15_ob1__c/Sep_15_ob1__c.object-meta.xml
<CustomObject>
    <label>Sep 15 ob1</label>
    <nameField>
        <label>Sep 15 ob1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sep 15 ob1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>