force-app/main/default/objects/Sep_15_ob1__c/fields/Sep_F1__c.field-meta.xml
<CustomField>
    <fullName>Sep_F1__c</fullName>
    <label>Sep F1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>