force-app/main/default/objects/Sep_15_ob1__c/fields/Sep_F2__c.field-meta.xml
<CustomField>
    <fullName>Sep_F2__c</fullName>
    <label>Sep F2</label>
    <type>Email</type>
</CustomField>