force-app/main/default/objects/Sep_15_ob1__c/fields/Sep_F3__c.field-meta.xml
<CustomField>
    <fullName>Sep_F3__c</fullName>
    <label>Sep F3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Test1</valueSetName>
    </valueSet>
</CustomField>